# farm_25

./: .gitignore  CMakeLists.txt  README.md
Documents/: BMP 280 info.txt  DHT11 Sensor.txt  LY170 multichannel Analog input board info.txt  MQTT test setup.docx  Mosture sensor example code.txt  light sensor example code.txt  misc info.txt
jason_commands/Sensor commands/: sensor init.txt  sensor ping.txt  sensor read BME280 humidity.txt  sensor read BME280 pressure - hpa.txt  sensor read BME280 pressure - inhg.txt  sensor read BME280 pressure - psi.txt  sensor read BME280 temperature.txt  sensor read humidity.txt  sensor read moisture percent.txt  sensor read moisture voltage.txt  sensor read temperature code.txt  sensor read temperature.txt  sensors status.txt
main/: CMakeLists.txt  farm_25_main.c
main/components/: idf_component.yml
main/components/bme280/: bme280.c
main/components/bme280/include/: bme280.h
main/include/Shared/: common.h
main/include/Sync/: syncTask.h
main/include/Task/: sensorsTask.h  wifiTask.h
main/src/Shared/: messages.c
main/src/Sync/: syncTask.c
main/src/Task/: bleTask.c  dispatcherTask.c  sensorsTask.c  serialTask.c  stateMachines.c  strgTask.c  sysControlTask.c  wifiTask.c
templates/: modNameSync.c  modNameSync.h  modNameTask.c  modNameTask.h  state machine template.c
